fixing accessibility contrast ratio

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -139,7 +139,7 @@ main {
 }
 .text__h4 {
 	font-size: map-get($font-size, p);
-	color: map-get($color, greenish);
+	color: map-get($color, darkish-green);
 	font-weight: 500;
 }
 
